external-crates/move/crates/move-compiler/tests/move_2024/parser/top_level_module_mixed_invalid_2.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_2024/parser/top_level_module_mixed_invalid_2.move:7:11
  │
1 │ module a::n {
  │           - Previous module defined here
  ·
7 │ module a::m;
  │           ^ Cannot define an additional 'module' via label in a file with multiple modules
  │
  = Either move each 'module' into its own file or define each addiitional module as 'module <name> { contents }'
